# ds-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTES.md  README.md  rust.yml
compat/: Cargo.toml  bindings.h  ds  main.c
compat/src/: alliance.rs  ds.rs  lib.rs
examples/: simple.rs
libDS/: Cargo.toml  README.md  cbindgen.toml  libDS.h
libDS/examples-c/: stdout-printer.c
libDS/src/: cds.rs  joysticks.rs  lib.rs  trace.rs
src/: ds.rs  ext.rs  lib.rs  main.rs  util.rs
src/ds/: conn.rs  mod.rs  state.rs
src/ds/conn/: backoff.rs
src/ds/state/: recv.rs  send.rs
src/inbound/: tcp.rs
src/inbound/udp/: mod.rs  types.rs
src/inbound/udp/types/: mod.rs  tag.rs  tags.rs
src/outbound/tcp/: mod.rs  tags.rs
src/outbound/udp/: mod.rs
src/outbound/udp/types/: mod.rs  tags.rs
src/proto/: tcp.rs  udp.rs
src/proto/tcp/: inbound.rs  outbound.rs
src/proto/udp/: inbound.rs  outbound.rs
src/proto/udp/inbound/: types.rs
src/proto/udp/inbound/types/: tags.rs
src/proto/udp/outbound/: types.rs
src/proto/udp/outbound/types/: tags.rs
