[package]
name = "ds"
description = "A library for controlling FIRST Robotics Competition robots"
license = "MIT/Apache-2.0"
repository = "https://gitlab.com/Redrield/ds-rs"
documentation = "https://docs.rs/ds"
readme = "README.md"
version = "1.1.2"
keywords = ["frc", "first", "robotics"]
categories = ["network-programming"]
authors = ["Kaitlyn Kenwell <redrield@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.0.4"
byteorder = "1.2.7"
failure = "0.1.3"
chrono = "0.4.6"
crossbeam-channel = "0.3.2"
smallvec = "0.6.7"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["udp", "codec"] }
bytes = "0.5.3"
futures-channel = "0.3.1"
futures-util = { version = "0.3.1", features = ["sink", "async-await"] }
futures = "0.3.1"
